# rust-headless-chrome

./: Cargo.toml
examples/: print_to_pdf.rs  settings_and_event.rs  take_screenshot.rs
src/: lib.rs  util.rs
src/browser/: context.rs  fetcher.rs  mod.rs  process.rs
src/browser/tab/: keys.rs  mod.rs
src/browser/tab/element/: mod.rs
src/browser/transport/: mod.rs  waiting_call_registry.rs  web_socket_connection.rs
src/protocol/: mod.rs  network.rs
tests/: connect_to_url.rs  events_listeners.rs  file_chooser.rs  local_storage.rs  simple.rs
