[package]
name = "headless_chrome"
version = "0.9.0"
authors = ["Alistair Roche <alistair@sunburnt.country>"]
edition = "2018"
description = "Control Chrome programatically"
license = "MIT"
homepage = "https://github.com/atroche/rust-headless-chrome"
repository = "https://github.com/atroche/rust-headless-chrome"
readme = "README.md"

[dependencies]
websocket = { version = "0.26", default_features = false, features = ["sync"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
log = "0.4"
rand = "0.7"
tempfile = "3"
base64 = "0.13"
derive_builder = "0.9"
which = "4.0"
ureq = { version = "1.5", optional = true }
directories-next = { version = "2.0", optional = true }
zip = { version = "^0.5.3", optional = true }
walkdir = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.7"

[dev-dependencies]
env_logger = "0.8"
chrono = { version = "0.4", default_features = false }
tiny_http = "0.7"
png = { version = "0.16" }
jpeg-decoder = { version = "0.1", default_features = false }
filepath = "0.1.1"

[lib]
name = "headless_chrome"
path = "src/lib.rs"

[features]
default = []
fetch = [ "ureq", "directories-next", "zip", "walkdir" ]
nightly = []
